@@ -1,0 +1,25 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    </head>
+<body>
+    <div style="margin-top: 15px; font: -apple-system-headline">H1 / Headline</div>
+    <div style="margin-top: 15px; font: -apple-system-title0">T0 / Title0</div>
+    <div style="margin-top: 15px; font: -apple-system-title1">T1 / Title1</div>
+    <div style="margin-top: 15px; font: -apple-system-title2">T2 / Title2</div>
+    <div style="margin-top: 15px; font: -apple-system-title3">T3 / Title3</div>
+    <div style="margin-top: 15px; font: -apple-system-title4">T4 / Title4</div>
+    <div style="margin-top: 15px; font: -apple-system-body">Body Text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ornare ornare mi</div>
+    <div style="margin-top: 15px; font: -apple-system-tall-body">Tall Body Text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ornare ornare mi</div>
+    <div style="margin-top: 15px; font: -apple-system-subheadline">Subheadline</div>
+    <div style="margin-top: 15px; font: -apple-system-footnote">FN / Footnote</div>
+    <div style="margin-top: 15px; font: -apple-system-caption1">Cap 1 / Caption 1</div>
+    <div style="margin-top: 15px; font: -apple-system-caption2">Cap 2 / Caption 2</div>
+    <div style="margin-top: 15px; font: -apple-system-short-headline">Short H1 / Headline</div>
+    <div style="margin-top: 15px; font: -apple-system-short-body">Short Body Text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ornare ornare mi</div>
+    <div style="margin-top: 15px; font: -apple-system-short-subheadline">Short Subheadline</div>
+    <div style="margin-top: 15px; font: -apple-system-short-footnote">Short FN / Footnote</div>
+    <div style="margin-top: 15px; font: -apple-system-short-caption1">Short Cap 1 / Caption 1</div>
+</body>
+</html>
